<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/live_tab"
        android:iconTint="@color/white"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/calendar_white"
        android:iconTint="@color/white"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_result"
        android:icon="@drawable/scoreboard"
        android:iconTint="@color/white"
        android:title="@string/title_result" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/icon_news"
        android:iconTint="@color/white"
        android:title="@string/title_news" />

</menu>